--- a/package.json
+++ b/package.json
@@ -7,8 +7,16 @@
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
+  "peerDependencies": {
+    "vue": "^2.6.11",
+    "element-ui": "^2.15.0",
+    "dayjs": "^1.10.3"
+  },
   "dependencies": {
-    "vue": "^2.6.11"
+    "axios": "^0.21.1",
+    "dayjs": "^1.10.3",
+    "vue": "^2.6.11",
+    "element-ui": "^2.15.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-eslint": "~4.5.0",
